--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon index.js"
+    "start": "npx nodemon index.js",
+    "serve": "json-server --watch db.json"
   },
   "keywords": [],
   "author": "Josue Rodriguez <josuerodcat90@gmail.com> (https://github.com/josuerodcat90)",
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^3.6.2",
+    "axios": "^0.25.0",
     "graphql": "^16.3.0",
+    "json-server": "^0.17.0",
     "uuid": "^8.3.2"
   }
 }
