--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon index.js",
-    "serve": "json-server --watch db.json"
+    "serve": "json-server --watch configs/db.json"
   },
   "keywords": [],
   "author": "Josue Rodriguez <josuerodcat90@gmail.com> (https://github.com/josuerodcat90)",
   "license": "MIT",
   "dependencies": {
-    "apollo-server": "^3.6.2",
-    "axios": "^0.25.0",
-    "graphql": "^16.3.0",
-    "json-server": "^0.17.0",
-    "uuid": "^8.3.2"
+    "apollo-server": "3.6.2",
+    "axios": "0.25.0",
+    "graphql": "16.3.0",
+    "json-server": "0.17.0",
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "6.2.1",
+    "mongoose-unique-validator": "2.0.3",
+    "uuid": "8.3.2"
+  },
+  "devDependencies": {
+    "dotenv": "16.0.0"
   }
 }
